# TorchCP

./: .codecov.yml  .gitignore  .readthedocs.yml  AUTHORS.txt  CONTRIBUTING.md  MANIFEST.in  README.md  imagenet_example.py  imagenet_thr_standard.py  output.csv  pyproject.toml  pytest.ini  requirements.txt  setup.py
deepcp/: common.py  loss.py  test_utils.py
deepcp_examples/: benchmark_utils.py  conformal_training.py  covariate_shift.py  dataset.py  imagenet_class_conditional.py  imagenet_example.ipynb  imagenet_example.py  imagenet_example_logits.py  imagenet_standard.py  imagenet_standard_logits.py  imagenet_standard_pros.py  imagenet_thr_standard.py  instantiate_adversary_from_attackconfig_class.py  models.py  reg_CQR.py  reg_aci.py  reg_splitCP.ipynb  reg_splitCP.py  tutorial_train_mnist.py  utils.py
docs/: Makefile  conf.py  index.rst  requirements.txt  requirements_base.txt  torchcp.classification.loss.rst  torchcp.classification.utils.rst
examples/: cfgnn_trainer.py  classification.py  classification_TS_trainer.py  classification_TS_trainer_cifar100.py  classification_Uniform_trainer_synthetic.py  classification_benckmark.py  classification_cifar100.py  classification_cifar100_splitcp.py  classification_class.py  classification_conftr_cifar100.py  classification_confts_cifar100.py  classification_example.py  classification_scpo_cifar10.py  classification_scpo_cifar100.py  classification_splitcp_cifar100.py  classification_splitcp_cifar100_online.py  classification_ua_trainer_cifar10.py  conformal_learning.py  conformal_llm.py  conformal_training.py  (+30 more)
(+402 files in other folders)
