[tool.poetry]
name = "TorchCP"
version = "0.1.1"
description = "A Python toolbox for conformal prediction research on deep learning models, using PyTorch."
authors = [
    "Hongxin Wei <weihx@sustech.edu.cn>",
    "Jianguo Huang <huangjg@shanghaitech.edu.cn>",
]
readme = 'README.md'
repository = "https://github.com/ml-stat-Sustech/TorchCP"
homepage = "https://github.com/ml-stat-Sustech/TorchCP"
documentation = "https://torchcp.readthedocs.io/en/latest/index.html"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "=5.0.0"
flake8 = "^3.7.9"
black = "^19.10b0"
isort = "^4.3.21"
pre-commit = "^1.20"
commitizen = "^1.17.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
